# Dead_plus_plus

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.cpp  mingw-toolchain.cmake
.cache/clangd/index/: Entity.hpp.26EAF7653FB51863.idx  Entity.hpp.D43F76DE9A859F2A.idx  GameMusic.hpp.FDE28227C019342F.idx  GameState.hpp.E4DBE0D9F2645662.idx  Menu.hpp.C9D02A3CC0715E1E.idx  Player.hpp.044EA43B5F7B7DCE.idx  Player.hpp.96EE4E94C085D3FC.idx  Zombie.hpp.A2F771FC994E6DC4.idx  main.cpp.5F152F5BB7F6DE0A.idx  main.cpp.E6B9A6C2D476EA09.idx
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
sprites/: Player.hpp
src/: Game.hpp  Textures.hpp  main.cpp
src/config/: GameState.hpp  GameUi.hpp
src/screens/: Menu.hpp  Options.hpp
src/sounds/: GameMusic.hpp
src/sprites/: Entity.hpp  Player.hpp  Zombie.hpp
